# hsclap

./: README.md  flake.nix  hsclap.cabal  package.yaml  shell.nix  stack.yaml
examples/foofoo-cli/: Main.hs
src/: Hsclap.hs  Main  Main.hs
