cabal-version: 3.8
name:          hsclap
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules: Main
  hs-source-dirs:  src
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  build-depends:   base
