cabal-version: 3.8
name:          hsclap
version:       0.1.0.0
description:   Please see the README on GitHub at: https://github.com/haruki7049/hsclap#readme
homepage:      https://github.com/haruki7049/hsclap
build-type:    Simple

source-repository head
  type: git
  location: https://github.com/haruki7049/hsclap

library
  exposed-modules: Main
  hs-source-dirs:  src
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  build-depends:   base
  default-language: Haskell2010
